# ATLAS

./: .dockerignore  .env.example  .gitignore  ATLAS_ProductBacklog.docx  Atlas.ipynb  CDC_TEST_RESULTS.md  README.md  TESTING_TEACHER_IMPORT.md  api.txt  atlas_schema.sql  atlas_schema_drawdb.sql  boot.sh  docker-compose.yml  exempl-env  p.py  package-lock.json  package.json  pyvenv.cfg  teacher_invites_dummy.csv
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_db.py  diagnostic_probe.py  docker-compose.yml  pyproject.toml  requirements.txt  run_celery.py  seed_fresh_test_state.py  setup_departments.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  1b8e1bcbd230_drop_xp_gamification_tables.py  20260309_add_document_embedding.py  20260310_sota_models_and_embeddings.py  3dfb39954c76_clean_initial_schema_v2.py  412e8feb15b2_add_userstreak_and_intelligence_models.py  5208ed03aeb1_add_sprint3_ai_models.py  7ba4e1182a2b_add_userstreak_model_for_learning_.py  96029914f94b_add_created_at_to_contribution.py  99ecea9fcb0d_initial_schema.py  <new_revision>_add_major_and_course_major.py  a79000e54375_add_otptoken_support.py  b17c7639f8ad_add_gin_indexes_for_document_version_ids.py  (+5 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: cache.py  (+12 more)
backend/docker/: README.md  api.Dockerfile  worker.Dockerfile
backend/tests/: conftest.py  test_auth.py  test_e2e_pipeline.py  test_embedding_benchmark.py  test_health.py  test_ocr_load.py  test_ocr_pipeline.py  test_security_error_paths.py
(+579 files in other folders)
